--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/>
     </parent>
     <groupId>org.backend</groupId>
-    <artifactId>gdc</artifactId>
+    <artifactId>Gcmd</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Gcmd</name>
     <description>Backend gestion des commandes</description>
@@ -105,6 +105,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 
