--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,19 @@
 # ---------------  Server config ------------------------------------------------------------
 server.port=9999
 spring.application.name=Gcmd
-project.version= V1.0.0
-project.description= description project
+project.version=V1.0.0
+project.description=description project
 # --------------- DataBase connection  ------------------------------------------------------
-spring.datasource.url=jdbc:mysql://localhost:3306/Gcmd?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/gcmd?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 # --------------- Hibernate Properties  -----------------------------------------------------
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
 # ---------------  Endpoints Docs -----------------------------------------------------------
 springdoc.swagger-ui.path=/docs
 springdoc.swagger-ui.operationsSorter=method
-
 #spring.datasource.url=jdbc:h2:mem:compte_db
 #spring.h2.console.enable=true
 #server.port=3230
