--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,13 +4,15 @@ spring.application.name=Gcmd
 project.version=V1.0.0
 project.description=description project
 # --------------- DataBase connection  ------------------------------------------------------
-spring.datasource.url=jdbc:mysql://localhost:3306/gcmd?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:h2:mem:db;MODE=MYSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=FALSE
+spring.datasource.username=sa
+spring.datasource.password=password
 # --------------- Hibernate Properties  -----------------------------------------------------
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
 # ---------------  Endpoints Docs -----------------------------------------------------------
 springdoc.swagger-ui.path=/docs
 springdoc.swagger-ui.operationsSorter=method
+
+
