--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,16 @@ spring.application.name=Gcmd
 project.version=V1.0.0
 project.description=description project
 # --------------- DataBase connection  ------------------------------------------------------
-spring.datasource.url=jdbc:mysql://localhost:3306/gcmd?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/gcmd?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+spring.datasource.username=postgres
+spring.datasource.password=root
 # --------------- Hibernate Properties  -----------------------------------------------------
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
