--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ---------------  Server config ------------------------------------------------------------
-server.port=8081
+server.port=8080
 spring.application.name=Gcmd
 project.version=V1.0.0
 project.description=description project
@@ -7,7 +7,7 @@ project.description=description project
 #spring.datasource.url=jdbc:mysql://localhost:3306/gcmd?useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=
-spring.datasource.url=jdbc:postgresql://localhost:5432/gcmd
+spring.datasource.url=jdbc:postgresql://localhost:5432/testdb1
 spring.datasource.username=postgres
 spring.datasource.password=root
 # --------------- Hibernate Properties  -----------------------------------------------------
